* Introduced the MIPMAPMEM Scene texture image maps resize policy
* GPU out-of-core rendering now automatically disable Film GPU image pipeline to save more memory
* Added the support for Film-only out-of-core rendering (CUDA-only) with property opencl.outofcore.film.enable
* Added a safety check for infinite light source when HDR with invalid values (NaN, Inf, etc.) is used
* Albedo AOV reflections and transmissions can now be configured (mostly for denoising)
* Added the support to Intel OIDN plugin for enabling/diasbling prefiltering with .prefilter.enable property
* Disney glossiness evaluation (for PGI, Albedo AOV, etc.) now checks metal and specular parameters
* Disney glossiness evaluation uses now the square root of the value to align with the roughness of Glossy2, Metal, etc.
* Added the support for image map filtering nearest, linear was the only mode available before (issue #545)

### Fixed Bugs

* Fixed the reading of IES files on system with not-US locale
* Fixed a problem with Python and Property objects initialized as double even if they were int
* Python Property object now consider int data type always as a 64 bit value
* Fixed a bug rendering black baked maps when using bump mapping and COMBINED type with BAKECPU rendering engine
* Fixed a bug when rendering caustics over volumes with Caustic cache (issue #533)
* Fixed a problem causing the initialization of multiple dataset accelerators in some case
* Fixed a problem with incorrect alpha AOV values (issue #536)
* Fixed a problem when using Add/Subtract textures with bump mapping (issue #689)

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()