@@ -56,14 +56,14 @@ ImagePipelinePlugin *IntelOIDN::Copy() const {
 void IntelOIDN::FilterImage(const string &imageName,
 		const float *srcBuffer, float *dstBuffer,
 		const float *albedoBuffer, const float *normalBuffer,
-		const u_int width, const u_int height) const {
+		const u_int width, const u_int height, const bool cleanAux) const {
     oidn::DeviceRef device = oidn::newDevice();
     device.commit();
 
     oidn::FilterRef filter = device.newFilter(filterType.c_str());
 
     filter.set("hdr", true);
-	filter.set("cleanAux", enablePrefiltering);
+	filter.set("cleanAux", cleanAux);
 	filter.set("maxMemoryMB", oidnMemLimit);
     filter.setImage("color", (float *)srcBuffer, oidn::Format::Float3, width, height);
     if (albedoBuffer) {	
@@ -112,7 +112,7 @@ void IntelOIDN::Apply(Film &film, const u_int index) {
 		if (enablePrefiltering) {
 			vector<float> albedoBufferTmp(3 * pixelCount);
 			FilterImage("Albedo", &albedoBuffer[0], &albedoBufferTmp[0],
-				nullptr, nullptr, width, height);
+				nullptr, nullptr, width, height, false);
 			for (u_int i = 0; i < albedoBuffer.size(); ++i)
 				albedoBuffer[i] = albedoBufferTmp[i];
 
@@ -125,7 +125,17 @@ void IntelOIDN::Apply(Film &film, const u_int index) {
             for (u_int i = 0; i < pixelCount; ++i)
                 film.channel_AVG_SHADING_NORMAL->GetWeightedPixel(i, &normalBuffer[i * 3]);
 			
-			//GenericFrameBuffer<3, 0, float>::SaveHDR("debug-normal.exr", normalBuffer, width, height);
+				//GenericFrameBuffer<3, 0, float>::SaveHDR("debug-normal.exr", normalBuffer, width, height);
+
+				if (enablePrefiltering) {
+					vector<float> normalBufferTmp(3 * pixelCount);
+					FilterImage("Normal", &normalBuffer[0], &normalBufferTmp[0],
+						nullptr, nullptr, width, height, false);
+					for (u_int i = 0; i < normalBuffer.size(); ++i)
+						normalBuffer[i] = normalBufferTmp[i];
+
+					//GenericFrameBuffer<3, 0, float>::SaveHDR("debug-normal1.exr", normalBuffer, width, height);
+				}
         } else
             SLG_LOG("[IntelOIDNPlugin] Warning: AVG_SHADING_NORMAL AOV not found");
     } else
@@ -134,7 +144,7 @@ void IntelOIDN::Apply(Film &film, const u_int index) {
 	FilterImage("Image Pipeline", (float *)pixels, &outputBuffer[0],
 			(albedoBuffer.size() > 0) ? &albedoBuffer[0] : nullptr,
 			(normalBuffer.size() > 0) ? &normalBuffer[0] : nullptr,
-			width, height);
+			width, height, enablePrefiltering);
 
     SLG_LOG("IntelOIDNPlugin copying output buffer");
     for (u_int i = 0; i < pixelCount; ++i) {
