@@ -29,11 +29,13 @@
 * GPU out-of-core rendering now automatically disable Film GPU image pipeline to save more memory
 * Added the support for Film-only out-of-core rendering (CUDA-only) with property opencl.outofcore.film.enable
 * Added a safety check for infinite light source when HDR with invalid values (NaN, Inf, etc.) is used
-* Albedo AOV reflections and transmissions can now be configured (mostly for denoising)
 * Added the support to Intel OIDN plugin for enabling/diasbling prefiltering with .prefilter.enable property
 * Disney glossiness evaluation (for PGI, Albedo AOV, etc.) now checks metal and specular parameters
 * Disney glossiness evaluation uses now the square root of the value to align with the roughness of Glossy2, Metal, etc.
 * Added the support for image map filtering nearest, linear was the only mode available before (issue #545)
+* Albedo AOV reflections and transmissions can now be configured (mostly for denoising)
+* Avg. Shading Normal AOV is now coherent with Albedo AOV reflections and transmissions settings
+* Intel OIDN plugin now pre-filters Avg. Shading Normal AOV too
 
 ### Fixed Bugs
 
